# olympia-g2

./: AUTHORS.md  BUILD_HISTORY.md  CLAUDE.md  CMakeLists.txt  README.md
doc/: Admin  Join  Loc  Todo  What  modernization-prototypes-playbook.md  realism  toc.c  turnrep  work
doc/phase4-tools/: fix_comp.py  fix_void_defs.py  gen_proto3.py  kr2ansi.py
g2/doc/: Exit  Map  disc  j  k  monsters  name
g2/mapgen/: mapgen.c  z.c  z.h
g2/olympia/: adv.c  basic.c  c1.c  c2.c  check.c  cloud.c  code.c  dir.c  dir.h  display.c  faery.c  garr.c  glob.c  gm.c  io.c  loc.c  loop.h  lore.c  npc.c  oly.h  order.c  perm.c  produce.c  quest.c  relig.c  report.c  rnd.c  savage.c  seed.c  sout.h  stack.c  storm.c  summary.c  tunnel.c  u.h  use.c  use.h  z.c  z.h
lib/: lists.h
mapgen/: mapgen.c  proto.h  rnd.c  z.c  z.h
olympia/: add.c  alchem.c  art.c  basic.c  beast.c  build.c  buy.c  c1.c  c2.c  check.c  cloud.c  code.c  combat.c  day.c  dir.c  dir.h  display.c  display.h  eat.c  etc.h  faery.c  garr.c  garr.h  gate.c  glob.c  gm.c  hades.c  immed.c  input.c  io.c  legacy.h  loop.h  lore.c  main.c  make.c  move.c  necro.c  npc.c  oly.h  order.c  (+25 more)
run/: g2-olympia.sh  olympia-g2.sh
run/g2/mapgen/: .gitignore  mapgen.sh
run/mapgen/: mapgen.sh
tests/g2/mapgen/golden/: Land  gate  loc  randseed  road
tests/g2/olympia/golden/: master
tests/mapgen/golden/: README.md
tests/olympia/: golden_check.sh
tests/olympia/golden/: fact-100.reference  manifest.sha256
